# email_classification

./: .env.example  .gitignore  README.md  app.py  confusion_category.csv  data_prep.ipynb  data_prep_v0.ipynb  email_dataset.csv  evaluate.py  full_dataset.csv  indexer.py  infer_email_multitask.py  infer_email_multitask_chain.py  infrence.py  output.txt  output2.txt  output3.txt  pyproject.toml  test.py  test_data.csv  test_date_predictions_multitask.csv  test_emails.py  test_encode.py  test_split_predictions_multitask.csv  train_email_multitask.py  train_email_multitask_chain.py  train_modernbert_email_classifiers.py
eval_report/: confusion_category.csv  confusion_important.csv  metrics.json
